# Task1_Kcell

./: README.md  conftest.py  pyproject.toml  requirements.txt  utils.py
models/: FormPage.py  Page.py
tests/: test_form_completion.py
