[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["canaldkz <canald000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
selenium = "^4.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "smoke",
    "xfail",
]